--- a/custom-range-slider/style.css
+++ b/custom-range-slider/style.css
@@ -5,11 +5,17 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
-  overflow: hidden;
   margin: 0;
+}
+
+#projects {
+  column-count: 2;
+  column-gap: 7px;
+}
+
+.app {
+  height: 100px;
+  width: 100px;
+  border: 1px solid black;
 }
