--- a/style.css
+++ b/style.css
@@ -1,22 +1,102 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 * {
   box-sizing: border-box;
 }
 
+:root {
+  --box-width: 120px;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
+  height: 100vh;
+  margin: 0;
+  background-color: #f6f7fb;
+}
+
+.header {
+  /* font-family: 'Poppins', sans-serif; */
+  /* font-family: "Times New Roman", Times, serif; */
+  font-size: 1.2rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
 
-#projects {
+.title {
+  margin: 20px 0 0;
+  padding: 20px 0 0;
+  color: rgb(84, 7, 148);
+}
+
+#projects-container {
+  /* width: 100%; */
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  /* the above actually does it?? (when using columns)*/
+  /* padding: 20px; */
+}
+
+#projects {
+  width: 100%;
+  padding: 0 30px;
+  margin-top: 30px;
+  /* margin: 20px auto; */
+  /* width: 100%; */
+  /* above makes no diff */
+  display: flex;
+  justify-content: space-around;
+  /* align-items: space-around; */
+  flex-wrap: wrap;
+  /* padding: 0 20px; */
+  /* margin: 0 20px; */
+  /* Column-count fills down columns, it seems */
+  /* column-count: 8;
+  column-width: var(--box-width);
+  column-gap: 14px; */
+  /* column-fill: balance; */
+}
+
+.project {
+  height: var(--box-width);
+  width: var(--box-width);
+  margin: 14px;
+  border: 1px solid black;
+  /* display: inline-block; */
+  /* w/out the above, when using columns won't line up vertically */
+  box-shadow: 3px 2px 5px rgb(40, 3, 109);
+}
+
+.project-inner {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-weight: bold;
 }
 
 .link {
-  display: block;
-  margin: 2px 0;
+  font-size: 16px;
+  text-decoration: none;
+  color: rgb(94, 29, 146);
+  /* color: rgb(87, 9, 151) */
+}
+
+.link:hover {
+  opacity: 0.7;
+}
+
+.link:active {
+  transform: scale(0.95);
+  color: black;
+}
+
+.link:visited {
+  color: rgb(8, 40, 143);
+  color: blue;
+  /* Seems to always be active in Chrome, works in Firefox, but sometimes you have to refresh the screen after coming back from link */
 }
