--- a/drag-n-drop/style.css
+++ b/drag-n-drop/style.css
@@ -8,12 +8,33 @@
 
 body {
   background-color: steelblue;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
   overflow: hidden;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: space-around; */
+}
+
+#container {
+  margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.header {
+  color: #111;
+  margin-bottom: 80px;
+}
+
+#box-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .empty {
