Misc projects menu formatting changes

--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@ body {
   /* font-family: "Times New Roman", Times, serif; */
   font-size: 1.2rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
   padding-bottom: 25px;
 }
 
@@ -28,6 +30,11 @@ body {
   margin: 20px 0 0;
   padding: 20px 0 0;
   color: rgb(84, 7, 148);
+}
+
+#random {
+  display: none;
+  /* was just for testing what happens when come back from project */
 }
 
 #projects-container {
@@ -88,6 +95,7 @@ body {
   align-items: center;
   text-align: center;
   font-weight: bold;
+  padding: 0 .5em;
 }
 
 .project-inner.clicked {
