--- a/3d-boxes-background/style.css
+++ b/3d-boxes-background/style.css
@@ -45,6 +45,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin-top: 4em;
   height: 500px;
   width: 500px;
   position: relative;
@@ -61,7 +62,9 @@ body {
 }
 
 .box {
-  background-image: url('https://media.giphy.com/media/EZqwsBSPlvSda/giphy.gif');
+  /* background-image: url('https://media.giphy.com/media/EZqwsBSPlvSda/giphy.gif');
+  background-image: url("https://media.giphy.com/media/xTiTnK5ALNxNx4FiBG/giphy.gif");
+  background-image: url('https://media.giphy.com/media/9FZkGJyITMk1LUKRvK/giphy.gif'); */
   background-repeat: no-repeat;
   background-size: 500px 500px;
   position: relative;
