--- a/custom-range-slider/style.css
+++ b/custom-range-slider/style.css
@@ -1,21 +1,131 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+  /* w/out above, font size was different in Chrome & Firefox ??? */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
+  overflow: hidden;
   margin: 0;
 }
 
-#projects {
-  column-count: 2;
-  column-gap: 7px;
+h2 {
+  position: absolute;
+  top: 10px;
 }
 
-.app {
-  height: 100px;
-  width: 100px;
-  border: 1px solid black;
+h3 {
+  position: absolute;
+  top: 70px;
+  width: 85%;
+  max-width: 600px;
+  color: #3F3F3F;
+}
+
+.range-container {
+  position: relative;
+  /* display: flex;
+  flex-direction: column-reverse;
+  justify-content: flex-start;
+  align-items: center; */
+  /* The above worked pretty well, about the same, w/out the label absolute positioned and reduced margin on input/range */
+}
+
+input[type='range'] {
+  width: 300px;
+  margin: 18px 0;
+  /* margin: 8px 0; */
+  -webkit-appearance: none;
+}
+
+input[type='range']:focus {
+  outline: none;
+}
+
+input[type='range']+label {
+  background-color: #fff;
+  position: absolute;
+  top: -25px;
+  left: 110px;
+  width: 80px;
+  padding: 5px 0;
+  text-align: center;
+  border-radius: 4px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+
+/* For Chrome and Safari */
+
+input[type='range']::-webkit-slider-runnable-track {
+  background: purple;
+  border-radius: 4px;
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+}
+
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 24px;
+  width: 24px;
+  background: #fff;
+  border-radius: 50%;
+  border: 1px solid purple;
+  margin-top: -7px;
+  cursor: pointer;
+}
+
+
+/* For Firefox */
+
+input[type='range']::-moz-range-track {
+  background: purple;
+  border-radius: 4px;
+  width: 100%;
+  height: 12px;
+  /* w/ 10 px had white around it, this covers it */
+  cursor: pointer;
+}
+
+input[type='range']::-moz-range-thumb {
+  -webkit-appearance: none;
+  height: 24px;
+  width: 24px;
+  background: #fff;
+  border-radius: 50%;
+  border: 1px solid purple;
+  margin-top: -7px;
+  cursor: pointer;
+}
+
+
+/* Microsoft. (Edge) */
+
+input[type='range']::-ms-track {
+  background: purple;
+  border-radius: 4px;
+  width: 100%;
+  height: 12px;
+  /* w/ 10 px had white around it, this covers it */
+  cursor: pointer;
+}
+
+input[type='range']::-ms-thumb {
+  -webkit-appearance: none;
+  height: 24px;
+  width: 24px;
+  background: #fff;
+  border-radius: 50%;
+  border: 1px solid purple;
+  margin-top: -7px;
+  cursor: pointer;
 }
