--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
   margin: 20px 0 0;
   padding: 20px 0 0;
   color: rgb(84, 7, 148);
+  color: rgb(73, 6, 128);
 }
 
 #random {
@@ -120,6 +121,7 @@ body {
   font-size: 16px;
   text-decoration: none;
   color: rgb(90, 6, 158);
+  color: rgb(30, 1, 53);
   /* color: rgb(87, 9, 151) */
 }
 
