--- a/kinetic-loader/style copy 2.css
+++ b/kinetic-loader/style copy 2.css
@@ -8,41 +8,32 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  /* overflow: hidden; */
+  overflow: hidden;
   margin: 0;
-  padding: 0;
 }
 
 #container {
   width: 100%;
   height: 100%;
-  position: relative;
-  /* display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column; */
+  flex-direction: column;
 }
 
 .instructions {
-  position: absolute;
-  top: 32%;
-  left: 57%;
-}
-
-@media(max-width: 670px) {
-  .instructions {
-    top: 25%;
-    left: 40%;
-  }
+  width: 100%;
+  margin-top: -2em;
+  margin-left: 20%;
+  margin-bottom: 1em;
+  padding: 0 1em;
 }
 
 .kinetic {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  position: relative;
+  /* right: 2em; */
   height: 80px;
   width: 80px;
-  transform: translate(-50%, -50%);
 }
 
 .style3 .kinetic {
