Another menu header color change

--- a/style.css
+++ b/style.css
@@ -39,9 +39,10 @@ body {
 .title {
   margin: 20px 0 0;
   padding: 20px 0 0;
-  color: rgb(84, 7, 148);
-  color: rgb(73, 6, 128);
-  color: rgb(24, 6, 128);
+  /* color: rgb(84, 7, 148); */
+  /* color: rgb(73, 6, 128); */
+  /* color: rgb(24, 6, 128); */
+  color: rgb(30, 5, 168);
 }
 
 #random {
