--- a/infinite-scroll-search/style.css
+++ b/infinite-scroll-search/style.css
@@ -30,8 +30,8 @@
     background: rgba(255, 255, 255, 0.8);
     opacity: 0.5;
     /* below is mine. Loader gets more blurry as more pages load, then fades out */
-    filter: blur(0px);
-    /* Blur actually is set in script */
+    filter: blur(2px);
+    /* Or blur actually is set in script */
     transition: opacity 0.3s ease-out;
   }
   
@@ -45,7 +45,8 @@
   .loader.hidden {
     opacity: 0;
   }
-  /* Search (from Hidden Search app) */
+  /* */
+  /*  Search fields (adapted from Hidden Search app) */
   
   .search {
     position: absolute;
@@ -54,7 +55,7 @@
     right: 10px;
     height: 1.2em;
     /* display: flex;
-  justify-content: flex-end; */
+    justify-content: flex-end; */
   }
   
   .search .input {
