--- a/movie-app/style.css
+++ b/movie-app/style.css
@@ -103,6 +103,8 @@ main {
   max-height: 100%;
   transform: translateY(101%);
   transition: transform 0.3s ease-in;
+  /* Mine. Fixed problem w/ long overviews */
+  overflow-y: auto;
 }
 
 .movie:hover .overview {
