blury loading - reload, etc.

--- a/50-projects-iframe/50-projects-i.css
+++ b/50-projects-iframe/50-projects-i.css
@@ -1,8 +1,7 @@
 /* To do
 Adjust container shadow on left somehow
-Find incrementing counter
-Allow reload on blurry image load
 Have screen-in-screen not fire automatically, at least if in frame
+Have this page start at top. Scroll commands below don't seem to be working
 ...
 */
 
