--- a/3d-boxes-background/style.css
+++ b/3d-boxes-background/style.css
@@ -11,8 +11,9 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: max(100vh, 700px);
   overflow: hidden;
+  overflow: auto;
   margin: 0;
 }
 
@@ -45,7 +46,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 4em;
+  /* margin-top: 4em; */
+  margin-top: 0em;
   height: 500px;
   width: 500px;
   position: relative;
@@ -55,6 +57,7 @@ body {
 .boxes.big {
   width: 600px;
   height: 600px;
+  margin-top: 4em;
 }
 
 .boxes.big .box {
