--- a/picture-in-picture/style.css
+++ b/picture-in-picture/style.css
@@ -8,9 +8,23 @@ body {
   margin: 0;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  /* justify-content: center; */
   align-items: center;
-  background: rgb(37, 37, 37)
+  background: rgb(37, 37, 37);
+}
+
+h1 {
+  color: #E0E0E0;
+  margin: 10% 5% 18% 5%;
+  text-align: center;
+}
+
+#buttons-container {
+  display: flex;
+  justify-content: space-between;
+  width: 350px;
+  height: 100px;
 }
 
 .button-container {
@@ -35,8 +49,21 @@ button {
   box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.4), 0 12px 12px 0 rgba(0, 0, 0, 0.3);
 }
 
-button:hover {
-  background: linear-gradient(to bottom, #696969, #575757);
+#source-button {
+  background: linear-gradient(to top, rgb(31, 10, 10), rgb(109, 3, 3));
+}
+
+#start-button {
+  background: linear-gradient(to top, rgb(19, 43, 19), rgb(3, 83, 3));
+}
+
+#source-button:hover {
+  /* background: linear-gradient(to bottom, #696969, #575757); */
+  background: linear-gradient(to top, rgb(41, 23, 23), rgb(75, 2, 2));
+}
+
+#start-button:hover {
+  background: linear-gradient(to top, rgb(35, 56, 35), rgb(7, 49, 7));
 }
 
 button:active {
