--- a/rotating-nav-animation/style.css
+++ b/rotating-nav-animation/style.css
@@ -87,17 +87,23 @@ nav ul {
   padding-left: 30px;
 }
 
+@media(max-width: 600px) {
+  nav ul {
+    padding-left: 12px;
+  }
+}
+
+nav ul li i {
+  font-size: 20px;
+  margin-right: 10px;
+}
+
 nav ul li {
   text-transform: uppercase;
   color: #fff;
   margin: 40px 0;
   transform: translateX(-100%);
   transition: transform 0.4s ease-in;
-}
-
-nav ul li i {
-  font-size: 20px;
-  margin-right: 10px;
 }
 
 nav ul li+li {
