--- a/theme-clock/style.css
+++ b/theme-clock/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Heebo:300&display=swap');
 * {
   box-sizing: border-box;
+  user-select: none;
 }
 
 :root {
@@ -9,19 +10,17 @@
   --date-color: white;
 }
 
+html {
+  background-color: white;
+  /* seems to be necessary in full screen iframe */
+}
+
 html.dark {
   --primary-color: #fff;
   --secondary-color: #333;
   --date-color: #000;
-}
-
-html.dark {
   background-color: #111;
   color: var(--primary-color);
-}
-
-html {
-  transition: all 0.5s ease-in;
 }
 
 body {
@@ -32,9 +31,10 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+  opacity: 0;
 }
 
-.toggle {
+.toggle-button {
   cursor: pointer;
   background-color: var(--primary-color);
   color: var(--secondary-color);
@@ -42,14 +42,15 @@ body {
   border-radius: 4px;
   padding: 8px 12px;
   position: absolute;
-  top: 100px;
+  top: 12%;
 }
 
-.toggle:focus {
+.toggle-button:focus {
   outline: none;
 }
 
 .clock-container {
+  margin-top: 5%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -60,39 +61,41 @@ body {
   position: relative;
   width: 200px;
   height: 200px;
-  /* background-color: #f0f0f0;
-  border-radius: 50%; */
-  /* ? */
+  /* background-color: #f0f0f0; */
+  border-radius: 50%;
+  /* Issue now is clock moves up when time filled in? */
 }
 
 .needle {
   background-color: var(--primary-color);
   position: absolute;
-  top: 50%;
-  /* bottom: 50%; */
+  bottom: 50%;
   left: 50%;
-  height: 65px;
   width: 3px;
+  height: 0;
   transform-origin: bottom center;
+  transition: all none;
+  /* Doesn't seem to work -- needles still spin */
   /* transition: all 0.5s ease-in; */
-  /* I took this out because was making the needle spin backward to zero when it hit 60 */
+  /* I took this out because was making the needles spin to start position */
   /* From Q&A, could just turn off in setTime() when hours/minutes/seconds == 0, */
 }
 
 .needle.hour {
-  transform: translate(-50%, -100%) rotate(0deg);
-  /* transform: translate(-50%, 0%) rotate(30deg); */
+  /* transform: translateX(-50%) rotate(0deg); */
+  /* transform: translate(-50%, 0%) rotate(0deg); */
+  height: 65px;
 }
 
 .needle.minute {
-  transform: translate(-50%, -100%) rotate(0deg);
-  /* transform: translate(-50%, 0%) rotate(60deg); */
+  /* transform: translateX(-50%) rotate(0deg); */
+  /* transform: translate(-50%, 0%) rotate(0deg); */
   height: 100px;
 }
 
 .needle.second {
-  transform: translate(-50%, -100%) rotate(0deg);
-  /* transform: translate(-50%, -0%) rotate(60deg); */
+  /* transform: translateX(-50%) rotate(0deg); */
+  /* transform: translate(-50%, -0%) rotate(0deg); */
   height: 100px;
   background-color: #e74c3c;
 }
@@ -102,9 +105,11 @@ body {
   width: 10px;
   height: 10px;
   position: absolute;
-  top: 50%;
+  /* top: 50%; */
+  bottom: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
+  transform: translate(-50%, 50%);
   border-radius: 50%;
 }
 
@@ -114,9 +119,10 @@ body {
   width: 5px;
   height: 5px;
   position: absolute;
-  top: 50%;
+  /* top: 50%; */
+  bottom: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 50%);
   border-radius: 50%;
 }
 
@@ -146,6 +152,6 @@ body {
   align-items: center;
   justify-content: center;
   line-height: 18px;
-  transition: all 0.5s ease-in;
+  /* transition: all 0.5s ease-in; */
   font-size: 12px;
 }
