--- a/incrementing-counter/style.css
+++ b/incrementing-counter/style.css
@@ -14,6 +14,7 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+  position: relative;
 }
 
 .counter-container {
@@ -41,8 +42,10 @@ body {
 button.reload {
   opacity: 0.5;
   transition: all 3s;
-  position: relative;
-  top: 20px;
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
 }
 
 button.hidden {
