--- a/good-cheap-fast/style.css
+++ b/good-cheap-fast/style.css
@@ -15,6 +15,11 @@ body {
   margin: 0;
 }
 
+h2 {
+  padding: 0 1em;
+  text-align: center;
+}
+
 .toggle-container {
   display: flex;
   align-items: center;
