--- a/form-wave-animation/style.css
+++ b/form-wave-animation/style.css
@@ -2,6 +2,8 @@
 * {
   box-sizing: border-box;
   user-select: none;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -9,23 +11,27 @@ body {
   color: #fff;
   font-family: 'Muli', sans-serif;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
   height: 100vh;
+  max-width: 100vh;
   overflow: hidden;
-  margin: 0;
 }
 
 .container {
   background-color: rgba(0, 0, 0, 0.4);
   padding: 20px 40px;
   border-radius: 5px;
+  font-size: max(2%, 16px);
+  border: 2px solid rgb(117, 19, 19);
+  width: min(500px, 80%);
 }
 
 .container h1 {
   text-align: center;
   margin-bottom: 30px;
+  font-size: 2em;
 }
 
 .container a {
@@ -59,8 +65,8 @@ body {
 
 .form-control {
   position: relative;
-  margin: 20px 0 40px;
-  width: 300px;
+  margin: min(5%, 20px) 0 40px;
+  width: min(100%, 300px);
 }
 
 .form-control input {
