--- a/steps/style.css
+++ b/steps/style.css
@@ -15,14 +15,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100vw;
   height: 100vh;
   overflow: hidden;
   margin: 0;
 }
 
 .container {
-  /* text-align: center; */
-  /* I don't know why he had this here */
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .progress-container {
@@ -30,8 +34,13 @@ body {
   justify-content: space-between;
   position: relative;
   margin-bottom: 30px;
-  max-width: 100%;
+  max-width: 95%;
   width: 350px;
+}
+
+.btn {
+  display: inline;
+  width:
 }
 
 
