--- a/theme-clock/style.css
+++ b/theme-clock/style.css
@@ -8,6 +8,13 @@
   --primary-color: #000;
   --secondary-color: #fff;
   --date-color: white;
+  font-size: 16px;
+}
+
+@media(max-width: 270px) {
+   :root {
+    font-size: 12px;
+  }
 }
 
 html {
@@ -127,7 +134,7 @@ body {
 }
 
 .time {
-  font-size: 60px;
+  font-size: 3.8rem;
 }
 
 .date {
