--- a/50-projects-iframe/50-projects-i.css
+++ b/50-projects-iframe/50-projects-i.css
@@ -11,13 +11,6 @@ check whole page on phone
 
 iframe width and height were just set in js. Now setting here and adjusting both project width and iframe width w/ media queries below. WIP
 
-Need responsive adjustments:
-
- 
- Toast notification -- make toasts smaller on smaller screen
- ToDo list (top cut off)
- Verify Account UI (top cut off)
-...
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
@@ -27,14 +20,16 @@ Need responsive adjustments:
 }
 
 :root {
-  --project-width: 600px;
-  --iframe-width: 560px;
+  --project-width: min(600px, 100%);
+  --iframe-width: min(560px, 97%);
+  font-size: 16px;
 }
 
 @media(max-width: 600px) {
    :root {
     --project-width: 98%;
     --iframe-width: 98%;
+    font-size: 12px;
   }
 }
 
@@ -89,7 +84,7 @@ body {
 
 #projects {
   width: 100%;
-  padding: 0 30px;
+  padding: 0 1.5rem;
   margin-top: 30px;
   display: flex;
   justify-content: space-around;
@@ -161,10 +156,11 @@ iframe {
   background: #E0E0E0B0;
   opacity: 0.8;
   opacity: 0;
+  transition: all 1s;
 }
 
 #full-screen-message:hover {
-  opacity: 1
+  opacity: 1;
 }
 
 
@@ -201,6 +197,6 @@ iframe {
   opacity: 0.8;
   position: fixed;
   top: 50%;
-  left: 40%;
+  left: 35%;
   transform: translate(-50%, -50%);
 }
