--- a/custom-range-slider/style.css
+++ b/custom-range-slider/style.css
@@ -32,6 +32,7 @@ h3 {
 
 .range-container {
   position: relative;
+  max-width: 100%;
   /* display: flex;
   flex-direction: column-reverse;
   justify-content: flex-start;
@@ -41,7 +42,8 @@ h3 {
 
 input[type='range'] {
   width: 300px;
-  margin: 18px 0;
+  max-width: 95%;
+  margin: 18px 5px;
   /* margin: 8px 0; */
   -webkit-appearance: none;
 }
