--- a/double-vertical-slider/style.css
+++ b/double-vertical-slider/style.css
@@ -1,4 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+:root {
+  font-size: 16px;
+}
+
+@media(max-width: 400px) {
+   :root {
+    font-size: 12px;
+  }
+}
+
+@media(max-width: 300px) {
+   :root {
+    font-size: 10px;
+  }
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -39,8 +55,24 @@ body {
 
 .left-slide h1 {
   font-size: 40px;
+  font-size: 2.5rem;
   margin-bottom: 10px;
   margin-top: -30px;
+  /* margin-left: 4px; */
+  text-align: center;
+}
+
+@media(max-width: 670px) {
+  .left-slide h1 {
+    transform: translateY(-20%);
+  }
+  .left-slide p {
+    margin-left: 5px;
+    margin-top: 100px;
+    font-size: 1.2rem;
+    /* transform: translateY(25%); */
+    text-align: center;
+  }
 }
 
 .right-slide {
