Drawing App - responsive adjustments

--- a/50-projects-iframe/50-projects-i.css
+++ b/50-projects-iframe/50-projects-i.css
@@ -9,6 +9,10 @@ Improve loading message for this page
 
 check whole page on phone
 
+Responsiveness:
+
+* Drawing App not to good below 514px wide, esp eraser
+
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
