--- a/drawing-app/style.css
+++ b/drawing-app/style.css
@@ -1,4 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+:root {
+  font-size: 16px;
+}
+
+@media(max-width: 300px) {
+   :root {
+    font-size: 12px;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
@@ -24,7 +34,7 @@ canvas {
   border: 1px solid slateblue;
   display: flex;
   width: 804px;
-  padding: 1rem;
+  padding: .7rem;
 }
 
 @media(max-width: 810px) {
@@ -46,7 +56,7 @@ canvas {
   height: 50px;
   height: 75px;
   width: 50px;
-  margin: 0.25rem;
+  margin: 0.2rem;
   padding: 0.25rem;
   cursor: pointer;
 }
@@ -112,6 +122,24 @@ canvas {
 #eraser-label {
   position: absolute;
   top: 78%;
+}
+
+@media(max-width:390px) {
+  #eraser-label {
+    font-size: 8px;
+  }
+}
+
+@media(max-width:345px) {
+  #eraser-label {
+    font-size: 6px;
+  }
+}
+
+@media(max-width:310px) {
+  #eraser-label {
+    font-size: 4px;
+  }
 }
 
 .slider {
