Feedback UI Design - responsive adjustments (unneeded)

--- a/feedback-ui-design/style.css
+++ b/feedback-ui-design/style.css
@@ -1,4 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:&display=swap');
+
+/* :root {
+  font-size: 16px;
+}
+
+@media(max-width: 560px) {
+   :root {
+    font-size: 12px;
+  }
+} */
+
 * {
   box-sizing: border-box;
   user-select: none;
@@ -11,6 +22,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100%;
   overflow: hidden;
   margin: 0;
 }
