--- a/infinite-scroll/style.css
+++ b/infinite-scroll/style.css
@@ -57,9 +57,15 @@ h1 {
 
 @media screen and (max-width: 600px) {
   h1 {
-    font-size: 20px
+    font-size: 30px
   }
   .image-container {
     margin: 10px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  h1 {
+    font-size: 24px
   }
 }
