--- a/picture-in-picture/style.css
+++ b/picture-in-picture/style.css
@@ -17,6 +17,7 @@ h1 {
   color: #E0E0E0;
   margin: 10% 0% 18% 0%;
   text-align: center;
+  padding: 0 0.5em;
 }
 
 #buttons-container {
@@ -46,6 +47,20 @@ button {
   border: 2px solid black;
   border-radius: 7px;
   box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.4), 0 12px 12px 0 rgba(0, 0, 0, 0.3);
+}
+
+@media(max-width: 325px) {
+  #buttons-container {
+    justify-content: space-around;
+  }
+  .button-container {
+    padding: 6px;
+  }
+  button {
+    width: 90px;
+    /* height: 50px; */
+    font-size: 16px;
+  }
 }
 
 #source-button {
