--- a/quiz-app/style.css
+++ b/quiz-app/style.css
@@ -21,6 +21,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
   width: 600px;
+  max-width: 95%;
   overflow: hidden;
 }
 
