--- a/quote-generator/style.css
+++ b/quote-generator/style.css
@@ -70,6 +70,13 @@ button {
   box-shadow: 0 0.3rem rgb(121, 121, 121, 0.65);
 }
 
+@media(max-width: 315px) {
+  button {
+    padding: 0.4rem 1.2rem;
+    font-size: 1rem;
+  }
+}
+
 button:hover {
   filter: brightness(110%);
 }
