--- a/random-image-feed/style.css
+++ b/random-image-feed/style.css
@@ -14,6 +14,22 @@ body {
   margin: 0;
 }
 
+h1 {
+  margin: 0 auto;
+}
+
+@media(max-width: 300px) {
+  h1 {
+    font-size: 24px;
+  }
+}
+
+@media(max-width: 225px) {
+  h1 {
+    font-size: 16px;
+  }
+}
+
 #container {
   display: flex;
   flex-wrap: wrap;
@@ -30,6 +46,7 @@ body {
 
 .image {
   width: 300px;
+  max-width: 100%;
   height: 300px;
   margin: 10px;
   /* transition: opacity 0.5s ease-in; */
