--- a/scroll-animation/style.css
+++ b/scroll-animation/style.css
@@ -4,6 +4,11 @@
   user-select: none;
 }
 
+
+/* html {
+  width: 100vw;
+} */
+
 body {
   background-color: #efedd6;
   font-family: 'Roboto', sans-serif;
@@ -13,9 +18,11 @@ body {
   justify-content: center;
   margin: 0;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 h1 {
+  text-align: center;
   margin: 10px;
 }
 
@@ -26,6 +33,7 @@ h1 {
   align-items: center;
   justify-content: center;
   width: 400px;
+  max-width: 95%;
   height: 200px;
   margin: 10px;
   border-radius: 10px;
