--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -23,6 +23,12 @@ h1 {
   opacity: 0.4;
 }
 
+@media (max-width: 545px) {
+  h1 {
+    font-size: 6rem;
+  }
+}
+
 form {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 100%;
