--- a/infinite-scroll-search/style.css
+++ b/infinite-scroll-search/style.css
@@ -102,8 +102,9 @@
   
   .search.active .btn {
     /* transform: translateX(198px); */
-    transform: translateX(180px);
-    opacity: 0.7;
+    transform: translateX(170px);
+    /* opacity: 0.7; */
+    /* opacity: 1; */
   }
   /* Image Container */
   
