--- a/50-projects-iframe/50-projects-i.css
+++ b/50-projects-iframe/50-projects-i.css
@@ -22,8 +22,13 @@ Responsiveness:
 }
 
 :root {
-  --project-width: min(600px, 100%);
-  --iframe-width: min(560px, 97%);
+  /* --project-width: min(600px, 100%);
+  --project-height: 600px;
+  --iframe-width: min(560px, 97%); */
+  /* W/ below, on 1875px+ screen, will fit 3 to a row. But am not sure it's better... */
+  --project-width: min(580px, 100%);
+  --project-height: 600px;
+  --iframe-width: min(545px, 97%);
   font-size: 16px;
 }
 
@@ -94,7 +99,7 @@ body {
 }
 
 .project {
-  height: var(--project-width);
+  height: var(--project-height);
   width: var(--project-width);
   margin: 14px;
   border: 1px solid black;
@@ -178,7 +183,8 @@ iframe {
 
 /* Loader */
 
-.loader {
+
+/* .loader {
   position: fixed;
   top: 0;
   bottom: 0;
@@ -192,13 +198,38 @@ iframe {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+} */
+
+#loader {}
+
+.loading-message {
+  position: fixed;
+  width: max(30%, 300px);
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 #loading-message {
   font-size: 20px;
+  font-weight: bold;
   opacity: 0.8;
-  position: fixed;
+  /* position: fixed;
   top: 50%;
   left: 35%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
+}
+
+#loading-instructions {
+  position: fixed;
+  bottom: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: min(95%, 800px);
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: bold;
 }
