--- a/50-projects-iframe/50-projects-i.css
+++ b/50-projects-iframe/50-projects-i.css
@@ -236,11 +236,18 @@ iframe {
 
 #loading-instructions {
   position: fixed;
-  bottom: 30%;
+  bottom: 20%;
   left: 50%;
   transform: translateX(-50%);
-  width: min(95%, 800px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: min(95%, 700px);
   font-family: sans-serif;
   font-size: 18px;
   font-weight: bold;
+  border: 1px solid rgba(100, 100, 100, 0.5);
+  box-shadow: 2px 2px 3px rgba(90, 90, 90, 0.4);
+  background: whitesmoke;
+  padding: 2em;
 }
