Misc Front End - remove header from loading screen and have fade in

--- a/50-projects-iframe/50-projects-i.css
+++ b/50-projects-iframe/50-projects-i.css
@@ -70,6 +70,8 @@ body {
   padding: 0 25px 25px 25px;
   user-select: none;
   text-shadow: 1px 1px 0px rgb(30, 1, 53);
+  opacity: 0;
+  transition: opacity 2s ease-in;
 }
 
 .header a {
