--- a/animated-countdown/style.css
+++ b/animated-countdown/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 * {
   box-sizing: border-box;
   user-select: none;
@@ -75,7 +75,7 @@ h4 {
 
 #play {
   position: fixed;
-  top: 65%;
+  top: 68%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
   text-align: center;
@@ -90,10 +90,18 @@ h4 {
 }
 
 button {
+  /* font-family: 'Roboto'; */
+  font-family: inherit;
+  /* Don't know why, but seems to be necessary */
   font-size: 0.9em;
-  background: rgba(92, 94, 207, 0.2);
-  padding: 0.35em;
-  box-shadow: 1px 1px 2px rgba(90, 120, 210, 0.5);
+  letter-spacing: 0.1em;
+  font-weight: 500;
+  /* background: rgba(92, 94, 207, 0.2); */
+  background: #3498db33;
+  padding: 0.35em 0.5em;
+  ;
+  box-shadow: 2px 2px 2px #0A0AC080;
+  /* #3498db11; */
 }
 
 @keyframes show {
