--- a/50-projects-iframe/50-projects-i.css
+++ b/50-projects-iframe/50-projects-i.css
@@ -7,7 +7,7 @@ Animated countdown -- in Firefox, hiccups on restart. Change to always have go b
 
 Simple version -- stays in prev app when exit from full screen. Have added a recommendation to use link
 
-(fixed by adding reset on click to body?) Animated countdown -- incosistenly actually runs in iframe, even though routine is running. A browser problem? Seems to work better     in Firefox. 1st 5x I tried, anyway. Though message & button were smaller until I manually set body to 16px and them to 2rem & 0.9 rem respectively...
+Animated countdown -- incosistenly actually runs in iframe, even though routine is running, even if button pushed, sometimes doesn't run animation. A browser problem? Seems to work better in Firefox. 1st 5x I tried, anyway. Though message & button were smaller until I manually set body to 16px and them to 2rem & 0.9 rem respectively...
 
 On Image Password Strengh (Password Strength Background) and Form Wave Animation, maybe another, is pulling in email & password from browser. Haven't been able to turn it off
 
