--- a/animated-countdown/style.css
+++ b/animated-countdown/style.css
@@ -30,12 +30,14 @@ h4 {
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 1
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+  transition: all 0.2s ease-in;
 }
 
 #num-container.hide {
   opacity: 0;
+  transform: translate(-50%, -50%) scale(0);
 }
 
 .counter {
@@ -56,7 +58,7 @@ h4 {
     transform: translate(-50%, -50%) scale(1);
   }
   100% {
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(0);
   }
 }
 
@@ -102,6 +104,7 @@ button {
   ;
   box-shadow: 2px 2px 2px #0A0AC080;
   /* #3498db11; */
+  cursor: pointer;
 }
 
 @keyframes show {
