--- a/50-projects-iframe/50-projects-i.css
+++ b/50-projects-iframe/50-projects-i.css
@@ -219,17 +219,19 @@ iframe {
   height: 100vh;
   width: 100vw;
   position: fixed;
-  top: 5%;
-  left: 50%;
-  transform: translateX(-50%);
+  top: 0;
+  left: 0;
+  padding: 1rem;
   font-size: 150px;
+  font-size: 11vw;
   text-align: center;
   color: magenta;
-  opacity: 0.025;
+  opacity: 0.03;
   z-index: 0;
   /* background-color: rgba(250, 250, 210, 1) */
-  background-color: yellow;
   /* doesn't seem to show */
+  /* background-color: green; */
+  /* background-color: #e0e0e0; */
 }
 
 .loading-message {
@@ -242,6 +244,7 @@ iframe {
   justify-content: space-around;
   align-items: center;
   font-size: 24px;
+  opacity: 0.7;
 }
 
 #loading-message {
