Misc Projects - vertical padding on smaller than 1871px screens. 3d Boxes - single click to change picture

--- a/50-projects-iframe/50-projects-i.css
+++ b/50-projects-iframe/50-projects-i.css
@@ -123,6 +123,15 @@ body {
   position: relative;
 }
 
+@media(max-width: 1871px) {
+  .projects {
+    padding: 0 5rem;
+  }
+  .project {
+    margin-bottom: 2.5rem;
+  }
+}
+
 .project.clicked {
   transform: scale(.95);
 }
