--- a/50-projects-iframe/50-projects-i.css
+++ b/50-projects-iframe/50-projects-i.css
@@ -111,7 +111,7 @@ body {
 .project {
   height: var(--project-height);
   width: var(--project-width);
-  margin: 14px;
+  margin: 1rem;
   border: 1px solid black;
   box-shadow: -3px -2px 5px inset rgb(40, 3, 109), 1px 1px 4px inset rgba(40, 3, 109, 0.8);
   display: flex;
