--- a/50-projects-iframe-load-all/50-projects-i.css
+++ b/50-projects-iframe-load-all/50-projects-i.css
@@ -70,7 +70,7 @@ body {
   padding: 0 25px 25px 25px;
   user-select: none;
   text-shadow: 1px 1px 0px rgb(30, 1, 53);
-  /* opacity: 0; */
+  opacity: 0;
   transition: opacity 2s ease-in;
 }
 
@@ -104,7 +104,7 @@ body {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  /* opacity: 0; */
+  opacity: 0;
   transition: opacity 2s ease-in;
 }
 
@@ -121,16 +121,6 @@ body {
   background-color: rgba(177, 162, 189, 0.03);
   padding: 20px 25px;
   position: relative;
-}
-
-.iframe-filler {
-  width: 100%;
-  height: 100%;
-  font-size: 1.5em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 0.6;
 }
 
 @media(max-width: 1871px) {
@@ -152,14 +142,12 @@ body {
   /* This would reset every time when went to project and back until started using session storage */
 }
 
-.iframe-box {
+iframe {
   width: var(--iframe-width);
   height: var(--iframe-width);
 }
 
 .link {
-  /* position: absolute;
-  top: 88%; */
   font-size: 24px;
   font-weight: bold;
   text-decoration: none;
@@ -200,6 +188,36 @@ body {
 #full-screen-message:hover {
   opacity: 1;
 }
+
+
+/* .project::after:hover {
+  content: "Double-click in box to open app in full screen";
+  width: 30em;
+  height: 5em;
+  position: absolute;
+  bottom: -80px;
+  opacity: 0.2;
+} */
+
+
+/* Loader */
+
+
+/* .loader {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.8);
+}
+
+.loader img {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+} */
 
 #loader {
   opacity: 1;
@@ -279,9 +297,9 @@ body {
 }
 
 .animated-bg {
-  background-image: linear-gradient(to right, #d1d3d6 0%, #e8edee 10%, #d3d5d8 30%, #d4d8db 50%, #d3d5d8 80%, #d1d3d6 100%);
+  background-image: linear-gradient(to right, #d1d3d6 0%, #edeef1 10%, #d3d5d8 20%, #f6f7f8 100%);
   background-size: 200% 100%;
-  animation: bgPos 3s linear infinite;
+  animation: bgPos 3s ease-in-out infinite;
   border-radius: 5px;
   box-shadow: 2px 2px 10px #d1d3d6;
 }
@@ -293,12 +311,4 @@ body {
   100% {
     background-position: -150% 0;
   }
-}
-
-.opaque {
-  opacity: 0;
-}
-
-.muted {
-  opacity: 0.5;
 }
