--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -21,6 +21,7 @@ h1 {
   font-size: 10rem;
   text-align: center;
   opacity: 0.4;
+  opacity: 1;
 }
 
 @media (max-width: 545px) {
@@ -73,6 +74,8 @@ form {
 
 small {
   color: #b5b5b5;
+  color: #636060;
   margin-top: 3rem;
+  margin-bottom: 1.2rem;
   text-align: center;
 }
