--- a/50-projects-iframe -just-rounds/50-projects-i.css
+++ b/50-projects-iframe -just-rounds/50-projects-i.css
@@ -35,7 +35,6 @@ Responsiveness:
   --project-width: min(580px, 100%);
   --project-height: 600px;
   --iframe-width: min(545px, 97%);
-  --progress: "Progressing...";
   font-size: 18px;
 }
 
@@ -232,17 +231,27 @@ body {
   /* background-color: #e0e0e0; */
 }
 
-#loading-message-container {
+.loading-message {
   position: fixed;
   width: max(30%, 300px);
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
   font-size: 24px;
   opacity: 0.7;
+}
+
+#loading-message {
+  font-size: 20px;
+  font-weight: bold;
+  opacity: 0.8;
+  /* position: fixed;
+  top: 50%;
+  left: 35%;
+  transform: translate(-50%, -50%); */
 }
 
 #loading-instructions {
@@ -263,34 +272,24 @@ body {
   padding: 2em;
 }
 
-.animated-bg {
+.animated-bg-text {
   display: inline-flex;
   height: 40px;
   width: 300px;
   max-width: 90%;
   margin: 8px 0 0 20px;
-  padding: 1.5em 2em;
-  justify-content: flex-start;
+  /* padding: 11px 0 0 40px; */
+  justify-content: center;
   align-items: center;
   color: rgba(50, 50, 50, .5);
+}
+
+.animated-bg {
   background-image: linear-gradient(to right, #d1d3d6 0%, #e8edee 10%, #d3d5d8 30%, #d4d8db 50%, #d3d5d8 80%, #d1d3d6 100%);
   background-size: 200% 100%;
   animation: bgPos 3s linear infinite;
   border-radius: 5px;
   box-shadow: 2px 2px 10px #d1d3d6;
-}
-
-#loading-message {
-  font-size: 1em;
-  font-weight: bold;
-  opacity: 0.8;
-  margin-left: 1.5em;
-  margin-left: 0;
-  color: purple;
-  /* position: fixed;
-  top: 50%;
-  left: 35%;
-  transform: translate(-50%, -50%); */
 }
 
 @keyframes bgPos {
