--- a/50-projects-iframe/50-projects-i.css
+++ b/50-projects-iframe/50-projects-i.css
@@ -211,6 +211,7 @@ body {
 #loader {
   opacity: 1;
   transition: opacity 2s;
+  position: relative;
 }
 
 #loading-wallpaper {
@@ -235,14 +236,31 @@ body {
 #loading-message-container {
   position: fixed;
   width: max(30%, 300px);
-  top: 30%;
+  top: 28%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   display: flex;
   justify-content: flex-start;
   align-items: center;
   font-size: 24px;
   opacity: 0.7;
+}
+
+.animated-bg {
+  display: inline-flex;
+  height: 40px;
+  width: 100%;
+  max-width: 90%;
+  margin: 8px 0 0 20px;
+  padding: 1.5em 3em;
+  justify-content: flex-start;
+  align-items: center;
+  color: rgba(50, 50, 50, .5);
+  background-image: linear-gradient(to right, #d1d3d6 0%, #e8edee 10%, #d3d5d8 30%, #d4d8db 50%, #d3d5d8 80%, #d1d3d6 100%);
+  background-size: 200% 100%;
+  animation: bgPos 3s linear infinite;
+  border-radius: 5px;
+  box-shadow: 2px 2px 10px #d1d3d6;
 }
 
 #loading-instructions {
@@ -263,23 +281,6 @@ body {
   padding: 2em;
 }
 
-.animated-bg {
-  display: inline-flex;
-  height: 40px;
-  width: 300px;
-  max-width: 90%;
-  margin: 8px 0 0 20px;
-  padding: 1.5em 2em;
-  justify-content: flex-start;
-  align-items: center;
-  color: rgba(50, 50, 50, .5);
-  background-image: linear-gradient(to right, #d1d3d6 0%, #e8edee 10%, #d3d5d8 30%, #d4d8db 50%, #d3d5d8 80%, #d1d3d6 100%);
-  background-size: 200% 100%;
-  animation: bgPos 3s linear infinite;
-  border-radius: 5px;
-  box-shadow: 2px 2px 10px #d1d3d6;
-}
-
 #loading-message {
   font-size: 1em;
   font-weight: bold;
@@ -287,10 +288,17 @@ body {
   margin-left: 1.5em;
   margin-left: 0;
   color: purple;
-  /* position: fixed;
-  top: 50%;
-  left: 35%;
-  transform: translate(-50%, -50%); */
+}
+
+#loader-close-button {
+  position: fixed;
+  bottom: 5%;
+  left: 50%;
+  transform: translate(-50%);
+  background-color: rgb(226, 212, 236);
+  border-radius: 5%;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 @keyframes bgPos {
