--- a/50-projects-iframe/50-projects-i.css
+++ b/50-projects-iframe/50-projects-i.css
@@ -236,7 +236,7 @@ body {
 #loading-message-container {
   position: fixed;
   width: max(30%, 300px);
-  top: 28%;
+  top: 25%;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -263,6 +263,15 @@ body {
   box-shadow: 2px 2px 10px #d1d3d6;
 }
 
+#loading-message {
+  font-size: 1em;
+  font-weight: bold;
+  opacity: 0.8;
+  margin-left: 1.5em;
+  margin-left: 0;
+  color: purple;
+}
+
 #loading-instructions {
   position: fixed;
   bottom: 20%;
@@ -281,21 +290,13 @@ body {
   padding: 2em;
 }
 
-#loading-message {
-  font-size: 1em;
-  font-weight: bold;
-  opacity: 0.8;
-  margin-left: 1.5em;
-  margin-left: 0;
-  color: purple;
-}
-
 #loader-close-button {
   position: fixed;
   bottom: 5%;
   left: 50%;
   transform: translate(-50%);
   background-color: rgb(226, 212, 236);
+  height: 3rem;
   border-radius: 5%;
   font-weight: bold;
   cursor: pointer;
