--- a/tv-search/style.css
+++ b/tv-search/style.css
@@ -42,6 +42,8 @@ header {
   font-size: 1rem;
   padding: .5rem 1rem;
   color: #fff;
+  width: fit-content;
+  width: 30em;
 }
 
 .search::placeholder {
@@ -51,6 +53,10 @@ header {
 .search:focus {
   outline: none;
   background-color: var(--primary-color);
+}
+
+#submit {
+  margin-left: 2em;
 }
 
 main {
